Completed trip service add_trip
