# trip/swagger_server/controllers/trip_controller.py
@@ -1,17 +1,17 @@
+import sys
+
 import connexion
-import six
 
 from swagger_server.models.location import Location  # noqa: E501
 from swagger_server.models.trip import Trip  # noqa: E501
 from swagger_server.models.trips import Trips  # noqa: E501
+from swagger_server.models.trip_id_body import TripIdBody  # noqa: E501
 from swagger_server.logic import basic_operations as bo 
 from swagger_server import util
 
 
 def add_trip(body=None):  # noqa: E501
     """Add a trip to the data used to calculate the value
-
-     # noqa: E501
 
     :param body: A JSON object containing trip information
     :type body: dict | bytes
@@ -20,8 +20,7 @@ def add_trip(body=None):  # noqa: E501
     """
     if connexion.request.is_json:
         body = Trip.from_dict(connexion.request.get_json())  # noqa: E501
-    result = bo.add_trip(body)
-    return result
+    return bo.add_trip(body)
 
 
 def get_location_by_id(location_id):  # noqa: E501
@@ -30,12 +29,11 @@ def get_location_by_id(location_id):  # noqa: E501
     Returns LocationID object. # noqa: E501
 
     :param location_id: The ID of the Location to return.
-    :type location_id: int
+    :type location_id: str
 
     :rtype: Location
     """
-    result = bo.get_location_by_id(location_id)
-    return result
+    return bo.get_location_by_id(location_id)
 
 
 def get_trip_between_date_time(start_date=None, end_date=None, limit=None):  # noqa: E501
@@ -54,10 +52,10 @@ def get_trip_between_date_time(start_date=None, end_date=None, limit=None):  # n
     """
     start_date = util.deserialize_datetime(start_date)
     end_date = util.deserialize_datetime(end_date)
-    return 'do some magic!'
+    return bo.get_trip_between_date_time(start_date, end_date, limit)
 
 
-def remove_trip(id):  # noqa: E501
+def remove_trip(trip_id):  # noqa: E501
     """Remove a trip in the data used to calculate the value
 
      # noqa: E501
@@ -67,21 +65,21 @@ def remove_trip(id):  # noqa: E501
 
     :rtype: None
     """
-    return 'do some magic!'
+    bo.remove_trip(trip_id)
 
 
-def update_trip(id, body=None):  # noqa: E501
+def update_trip(trip_id, body=None):  # noqa: E501
     """Change a trip in the data used to calculate the value
 
      # noqa: E501
 
-    :param id: ID of the trip to delete
-    :type id: str
+    :param trip_id: ID of the trip to delete
+    :type trip_id: str
     :param body: A JSON object containing trip information
     :type body: dict | bytes
 
     :rtype: str
     """
     if connexion.request.is_json:
-        body = Trip.from_dict(connexion.request.get_json())  # noqa: E501
-    return 'do some magic!'
+        body = TripIdBody.from_dict(connexion.request.get_json())  # noqa: E501
+    return bo.update_trip(trip_id, body)
