# trip/swagger_server/logic/basic_operations.py
@@ -5,12 +5,13 @@ from swagger_server.models.trips import Trips  # noqa: E501
 from swagger_server import util
 
 import sys
+import os
 
 import pymongo
+import bson
 
-client = pymongo.MongoClient(
-    "mongodb+srv://rAlexandre:F4cFUl5yW77ynldv@cn.9ah4l.mongodb.net/myFirstDatabase?retryWrites=true&w=majority")
-db = client.main
+client = pymongo.MongoClient(os.getenv('MONGO_URL'))
+db = client["trips-db"]
 
 
 def add_trip(trip):
@@ -25,15 +26,15 @@ def add_trip(trip):
     year_d = trip.dropoff_datetime.year - 2000
     month_p = year_p * 12 + trip.pickup_datetime.month
     month_d = year_d * 12 + trip.dropoff_datetime.month
-    day_p = month_p * 31 + month_p
-    day_d = month_d * 31 + month_d
+    day_p = month_p * 31 + trip.pickup_datetime.day
+    day_d = month_d * 31 + trip.dropoff_datetime.day
 
-    increment_trip_counter("year", year_p)
-    increment_trip_counter("year", year_d)
-    increment_trip_counter("month", month_p)
-    increment_trip_counter("month", month_d)
-    increment_trip_counter("day", day_p)
-    increment_trip_counter("day", day_d)
+    increment_trip_counter("year", year_p, trip.passenger_count)
+    increment_trip_counter("year", year_d, trip.passenger_count)
+    increment_trip_counter("month", month_p, trip.passenger_count)
+    increment_trip_counter("month", month_d, trip.passenger_count)
+    increment_trip_counter("day", day_p, trip.passenger_count)
+    increment_trip_counter("day", day_d, trip.passenger_count)
 
     dict_trip = trip.to_dict()
     created_trip = db["trips"].insert_one(dict_trip)
@@ -42,13 +43,13 @@ def add_trip(trip):
     return str(created_trip.inserted_id)
 
 
-def increment_trip_counter(unit, n):
+def increment_trip_counter(unit, counter, n):
     db["trips_" + unit].update_one(
         {
-            unit: n
+            unit: counter
         },
         {
-            "$inc": {"counter": 1}
+            "$inc": {"counter": n}
         },
         upsert=True
     )
@@ -86,26 +87,32 @@ def get_trip_between_date_time(start_date=None, end_date=None, limit=10):  # noq
     return 'do some magic!'
 
 
-def remove_trip(id):  # noqa: E501
+def remove_trip(trip_id):  # noqa: E501
     """Remove a trip in the data used to calculate the value
 
-    :param id: ID of the trip to delete
-    :type id: str
+    :param trip_id: ID of the trip to delete
+    :type trip_id: str
 
     :rtype: None
     """
-    return 'do some magic!'
+    # TODO: Update trip counters
+    db.trips.delete_one({"_id": bson.ObjectId(trip_id)})
 
 
-def update_trip(id, trip):  # noqa: E501
+def update_trip(trip_id, trip):  # noqa: E501
     """Change a trip in the data used to calculate the value
 
 
-    :param id: ID of the trip to delete
-    :type id: str
+    :param trip_id: ID of the trip to delete
+    :type trip_id: str
     :param trip: A object containing trip information
-    :type trip: Trip
+    :type trip: TripIdBody
 
     :rtype: str
     """
-    return 'do some magic!'
+    trip_dict = {k: v for k, v in trip.to_dict().items() if v}
+    trip_id = bson.ObjectId(trip_id)
+    updated_trip = db.trips.find_one_and_update({'_id': trip_id}, {"$set": trip_dict}, return_document=pymongo.ReturnDocument.AFTER)
+    updated_trip.pop('_id')
+    # TODO: Update trip counters
+    return updated_trip
